--- a/sass/modules/forms/forms-one.scss
+++ b/sass/modules/forms/forms-one.scss
@@ -8,6 +8,7 @@
     @include m.border-radius(20px);
     @include m.device-425px {
       padding: 50px 13px;
+      padding-top: 20px;
     }
     @include m.md {
       margin-top: 40px;
