--- a/sass/partials/_responsive-spacing.scss
+++ b/sass/partials/_responsive-spacing.scss
@@ -22,6 +22,7 @@
     padding-top: 100px;
     padding-bottom: 100px;
   }
+
   .res-1024-pb-100 {
     padding-bottom: 100px;
   }
@@ -39,10 +40,14 @@
   }
 }
 @include m.device-425px {
+  .res-pt-0 {
+    padding-top: 0px;
+  }
   .res-py-120 {
     padding-top: 120px;
     padding-bottom: 120px;
   }
+
   .res-py-100 {
     padding-top: 100px;
     padding-bottom: 100px;
@@ -50,7 +55,14 @@
   .res-pt-110 {
     padding-top: 110px;
   }
-
+  .res-py-80 {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .res-py-90 {
+    padding-top: 90px !important;
+    padding-bottom: 90px !important;
+  }
   .res-pt-115 {
     padding-top: 115px;
   }
@@ -79,10 +91,18 @@
     padding-top: 80px;
   }
 
+  .res-pt-90 {
+    padding-top: 90px;
+  }
   .res-pt-100 {
     padding-top: 100px;
   }
-
+  .res-pb-20 {
+    padding-bottom: 20px;
+  }
+  .res-pb-30 {
+    padding-bottom: 30px;
+  }
   .res-pb-40 {
     padding-bottom: 40px;
   }
@@ -96,6 +116,9 @@
     padding-bottom: 70px;
   }
   .res-pb-80 {
+    padding-bottom: 80px;
+  }
+  .res-pt-90 {
     padding-bottom: 80px;
   }
   .res-pb-100 {
